@@ -378,8 +378,10 @@
 				<mibObj oid=".1.3.6.1.4.1.2021.11.4" instance="0" alias="SwapOut" type="integer" /> 
 				<mibObj oid=".1.3.6.1.4.1.2021.11.7" instance="0" alias="SysInterrupts" type="integer" /> 
 				<mibObj oid=".1.3.6.1.4.1.2021.11.8" instance="0" alias="SysContext" type="integer" /> 
-				<mibObj oid=".1.3.6.1.4.1.2021.11.50" instance="0" alias="CpuRawUser" type="counter" /> 
-				<mibObj oid=".1.3.6.1.4.1.2021.11.52" instance="0" alias="CpuRawSystem" type="counter" /> 
+				<mibObj oid=".1.3.6.1.4.1.2021.11.50" instance="0" alias="CpuRawUser" type="counter" />
+				<mibObj oid=".1.3.6.1.4.1.2021.11.51" instance="0" alias="CpuRawNice" type="counter" />
+				<mibObj oid=".1.3.6.1.4.1.2021.11.52" instance="0" alias="CpuRawSystem" type="counter" />
+				<mibObj oid=".1.3.6.1.4.1.2021.11.53" instance="0" alias="CpuRawIdle" type="counter" />
 				<mibObj oid=".1.3.6.1.4.1.2021.11.55" instance="0" alias="CpuRawKernel" type="counter" /> 
 				<mibObj oid=".1.3.6.1.4.1.2021.11.57" instance="0" alias="IORawSent" type="counter" /> 
 				<mibObj oid=".1.3.6.1.4.1.2021.11.58" instance="0" alias="IORawReceived" type="counter" /> 
