@@ -46,9 +46,9 @@ hp.swbuffermiss, hp.swbuffersize, hp.swfreemem, hp.switchcpu, hp.swmemalloc, hp.
 hpux.cpu, hpux.memory, hpux.numFsMounted, hpux.numProcs, hpux.numUsers, hpux.swap, \
 juniper.bufferPoolUtil, juniper.cpu, juniper.temp, \
 microsoft.cpuPercentBusy, microsoft.diskSpaceC, microsoft.diskSpaceD, microsoft.memory, \
-netsnmp.cpuRaw, netsnmp.diskroot, netsnmp.diskrootpercent, netsnmp.hrMemory, \
-netsnmp.hrNumUsers, netsnmp.hrSystemProcesses, \
-netsnmp.hrSystemUptime, netsnmp.loadavg, \
+netsnmp.context, netsnmp.cpuStats, netsnmp.diskroot, netsnmp.diskrootpercent, netsnmp.hrMemory, \
+netsnmp.hrNumUsers, netsnmp.hrSystemProcesses, netsnmp.interrupts, \
+netsnmp.hrSystemUptime, netsnmp.swapinout, \
 netBotz.air, netBotz.humid, netBotz.temp, \
 nortel.kernelmem, nortel.kerneltasks, \
 novell.cacheBuffers, novell.codeDataMemory, novell.diskSpaceSys, \
@@ -1388,6 +1388,18 @@ report.microsoft.memory.command=--title="Total Memory" \
 ###### Reports Generated from NET-SNMP agents
 ######
 
+report.netsnmp.context.name=Context
+report.netsnmp.context.columns=SysContext
+report.netsnmp.context.type=node
+report.netsnmp.context.command=--title="Context" \
+ DEF:context={rrd1}:SysContext:AVERAGE \
+ CDEF:floatc=context,1,/ \
+ LINE2:floatc#0000ff:"Context" \
+ GPRINT:floatc:AVERAGE:"Avg \\: %10.2lf %s" \
+ GPRINT:floatc:MIN:"Min \\: %10.2lf %s" \
+ GPRINT:floatc:MAX:"Max \\: %10.2lf %s\\n" \
+
+# The following report has been replaced with cpuStats 
 report.netsnmp.cpuRaw.name=CPU Usage
 report.netsnmp.cpuRaw.columns=CpuRawSystem, CpuRawUser
 report.netsnmp.cpuRaw.type=node
@@ -1404,6 +1416,90 @@ report.netsnmp.cpuRaw.command=--title="CPU Use" \
  GPRINT:floatu:AVERAGE:"Avg \\: %10.2lf %s" \
  GPRINT:floatu:MIN:"Min \\: %10.2lf %s" \
  GPRINT:floatu:MAX:"Max \\: %10.2lf %s\\n"
+
+report.netsnmp.cpuStats.name=CPU Statistics
+report.netsnmp.cpuStats.columns=loadavg1,loadavg5,loadavg15,CpuRawUser,CpuRawSystem,CpuRawIdle,CpuRawNice
+report.netsnmp.cpuStats.type=node
+report.netsnmp.cpuStats.command=--title="CPU Statistics" \
+ --units-exponent 0 \
+ --width 565 \
+ --height 200 \
+ --vertical-label Load \
+ -l 0 \
+ -r \
+ DEF:loadavg1={rrd1}:loadavg1:AVERAGE \
+ DEF:loadavg5={rrd2}:loadavg5:AVERAGE \
+ DEF:loadavg15={rrd3}:loadavg15:AVERAGE \
+ DEF:ssCpuRawUser={rrd4}:CpuRawUser:AVERAGE \
+ DEF:ssCpuRawSystem={rrd5}:CpuRawSystem:AVERAGE \
+ DEF:ssCpuRawIdle={rrd6}:CpuRawIdle:AVERAGE \
+ DEF:ssCpuRawNice={rrd7}:CpuRawNice:AVERAGE \
+ CDEF:float1=loadavg1,100,/ \
+ CDEF:float5=loadavg5,100,/ \
+ CDEF:float15=loadavg15,100,/ \
+ CDEF:cpuNumerator=ssCpuRawUser,ssCpuRawNice,+,ssCpuRawSystem,+ \
+ CDEF:cpuDivisor=ssCpuRawUser,ssCpuRawNice,+,ssCpuRawSystem,+,ssCpuRawIdle,+ \
+ CDEF:cpuUse=cpuNumerator,cpuDivisor,/,100,* \
+ CDEF:cpuUse10=0,cpuUse,GE,0,float15,IF \
+ CDEF:cpuUse20=10,cpuUse,GT,0,float15,IF \
+ CDEF:cpuUse30=20,cpuUse,GT,0,float15,IF \
+ CDEF:cpuUse40=30,cpuUse,GT,0,float15,IF \
+ CDEF:cpuUse50=40,cpuUse,GT,0,float15,IF \
+ CDEF:cpuUse60=50,cpuUse,GT,0,float15,IF \
+ CDEF:cpuUse70=60,cpuUse,GT,0,float15,IF \
+ CDEF:cpuUse80=70,cpuUse,GT,0,float15,IF \
+ CDEF:cpuUse90=80,cpuUse,GT,0,float15,IF \
+ CDEF:cpuUse100=90,cpuUse,GT,0,float15,IF \
+ COMMENT:"\\n" \
+ COMMENT:"CPU Utilization (%)\\n" \
+ COMMENT:" " \
+ AREA:cpuUse10#0066FF:" 0-10%" \
+ AREA:cpuUse20#00CCFF:"11-20%" \
+ AREA:cpuUse30#00FFFF:"21-30%" \
+ AREA:cpuUse40#00CC00:"31-40%" \
+ AREA:cpuUse50#00FF00:"41-50%" \
+ COMMENT:"           " \
+ GPRINT:cpuUse:MIN:"Minimum \\: %2.1lf%%%s " \
+ GPRINT:cpuUse:MAX:"Maximum \\: %2.1lf%%%s" \
+ COMMENT:"\\n" \
+ COMMENT:" " \
+ AREA:cpuUse60#FFFF99:"51-60%" \
+ AREA:cpuUse70#FFFF00:"61-70%" \
+ AREA:cpuUse80#FFCC66:"71-80%" \
+ AREA:cpuUse90#FF9900:"81-90%" \
+ AREA:cpuUse100#FF0000:"91-100%" \
+ COMMENT:"          " \
+ GPRINT:cpuUse:LAST:"Current \\: %2.1lf%%%s" \
+ GPRINT:cpuUse:AVERAGE:"Average \\: %2.1lf%%%s" \
+ COMMENT:"\\n" \
+ COMMENT:"\\n" \
+ COMMENT:"Load Average\\n" \
+ COMMENT:" " \
+ LINE1:float1#CC0099:"1 minute" \
+ COMMENT:"                                                  " \
+ GPRINT:float1:MIN:"Minimum \\: %.2lf" \
+ GPRINT:float1:MAX:"  Maximum \\: %.2lf" \
+ COMMENT:"\\n" \
+ COMMENT:" " \
+ LINE1:float5#FF99CC:"5 minutes" \
+ COMMENT:"                                                 " \
+ GPRINT:float1:LAST:"Current \\: %.2lf" \
+ GPRINT:float1:AVERAGE:"  Average \\: %.2lf" \
+ COMMENT:"\\n" \
+ COMMENT:" " \
+ LINE1:float15#000000:"15 minutes\\n" \
+ AREA:cpuUse10#0066FF \
+ AREA:cpuUse20#00CCFF \
+ AREA:cpuUse30#00FFFF \
+ AREA:cpuUse40#00CC00 \
+ AREA:cpuUse50#00FF00 \
+ AREA:cpuUse60#FFFF99 \
+ AREA:cpuUse70#FFFF00 \
+ AREA:cpuUse80#FFCC66 \
+ AREA:cpuUse90#FF9900 \
+ AREA:cpuUse100#FF0000 \
+ LINE1:float15#000000
+
 
 report.netsnmp.diskroot.name=Disk Space on / 
 report.netsnmp.diskroot.columns=ns-disk-root-tot, ns-disk-root-used
@@ -1476,6 +1572,18 @@ report.netsnmp.hrSystemUptime.command=--title="System Uptime" \
  GPRINT:days:MIN:"Min  \\: %8.1lf %s" \
  GPRINT:days:MAX:"Max  \\: %8.1lf %s\\n"
 
+report.netsnmp.interrupts.name=Interrupts
+report.netsnmp.interrupts.columns=SysInterrupts
+report.netsnmp.interrupts.type=node
+report.netsnmp.interrupts.command=--title="Interrupts" \
+ DEF:interrupts={rrd1}:SysInterrupts:AVERAGE \
+ CDEF:floati=interrupts,1,/ \
+ LINE2:floati#0000ff:"Interrupts" \
+ GPRINT:floati:AVERAGE:"Avg \\: %10.2lf %s" \
+ GPRINT:floati:MIN:"Min \\: %10.2lf %s" \
+ GPRINT:floati:MAX:"Max \\: %10.2lf %s\\n" \
+
+# The following report has been replaced with cpuStats 
 report.netsnmp.loadavg.name=Load Average
 report.netsnmp.loadavg.columns=loadavg1, loadavg5, loadavg15
 report.netsnmp.loadavg.type=node
@@ -1498,6 +1606,23 @@ report.netsnmp.loadavg.command=--title="Load Average" \
  GPRINT:float15:AVERAGE:"Avg \\: %10.2lf %s" \
  GPRINT:float15:MIN:"Min \\: %10.2lf %s" \
  GPRINT:float15:MAX:"Max \\: %10.2lf %s\\n" \
+
+report.netsnmp.swapinout.name=Swap
+report.netsnmp.swapinout.columns=SwapIn, SwapOut
+report.netsnmp.swapinout.type=node
+report.netsnmp.swapinout.command=--title="Swap" \
+ DEF:swapin={rrd1}:SwapIn:AVERAGE \
+ DEF:swapout={rrd2}:SwapOut:AVERAGE \
+ CDEF:floatin=swapin,100,/ \
+ CDEF:floatout=swapout,100,/ \
+ LINE2:floatin#0000ff:"In" \
+ GPRINT:floatin:AVERAGE:"Avg \\: %10.2lf %s" \
+ GPRINT:floatin:MIN:"Min \\: %10.2lf %s" \
+ GPRINT:floatin:MAX:"Max \\: %10.2lf %s\\n" \
+ LINE2:floatout#00ff00:"Out" \
+ GPRINT:floatout:AVERAGE:"Avg \\: %10.2lf %s" \
+ GPRINT:floatout:MIN:"Min \\: %10.2lf %s" \
+ GPRINT:floatout:MAX:"Max \\: %10.2lf %s\\n" \
 
 ######
 ###### NetBotz Reports
